# paperwall

./: .gitignore  README.md  README.zh-CN.md  RELEASE_TEMPLATE.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
scripts/: package-macos-dmg.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  002_categories.sql  003_v02.sql  004_reading_notes.sql  005_title_quality.sql
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  models.rs
src-tauri/src/services/: classifier.rs  dedupe.rs  external_reader.rs  file_ops.rs  metadata.rs  metadata_enrichment.rs  rename.rs
src/components/common/: LocalErrorBoundary.tsx
src/components/layout/: Sidebar.tsx  TopBar.tsx
src/components/paper/: DetailDrawer.tsx  PaperCard.tsx  PaperList.tsx  ReaderPanel.tsx
src/components/ui/: badge.tsx  button.tsx  input.tsx  select.tsx  textarea.tsx
src/lib/: citation.ts  citationFormatter.ts  classification.ts  filter.ts  related.ts  rename.ts  smartShelfSelector.ts
src/services/: api.ts  demo.ts  pdf.ts
src/store/: usePaperStore.ts
src/tests/: citationFormatter.test.ts  classification.test.ts  rename.test.ts  smartShelfSelector.test.ts
src/types/: category.ts  note.ts  paper.ts  settings.ts
