[package]
name = "paperwall"
version = "0.2.0-beta.1"
description = "PaperWall desktop app"
authors = ["paperwall"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "paperwall_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
log = "0.4"
pdf-extract = "0.7"
regex = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
sanitize-filename = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.10.3", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
uuid = { version = "1", features = ["v4", "serde"] }
